fixed horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,17 @@ section {
   font-weight: 600;
   /* margin: 1rem 0px; */
 }
+
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
